; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-exception-store.c_dm_exception_store_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-exception-store.c_dm_exception_store_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [51 x i8] c"Unable to register transient exception store type.\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"Unable to register persistent exception store type\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dm_exception_store_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @dm_transient_snapshot_init()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @DMERR(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  br label %17

8:                                                ; preds = %0
  %9 = call i32 (...) @dm_persistent_snapshot_init()
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = call i32 @DMERR(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  br label %15

14:                                               ; preds = %8
  store i32 0, i32* %1, align 4
  br label %19

15:                                               ; preds = %12
  %16 = call i32 (...) @dm_transient_snapshot_exit()
  br label %17

17:                                               ; preds = %15, %6
  %18 = load i32, i32* %2, align 4
  store i32 %18, i32* %1, align 4
  br label %19

19:                                               ; preds = %17, %14
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @dm_transient_snapshot_init(...) #1

declare dso_local i32 @DMERR(i8*) #1

declare dso_local i32 @dm_persistent_snapshot_init(...) #1

declare dso_local i32 @dm_transient_snapshot_exit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
